<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myName"
        android:layout_marginTop="100dp"
        android:text="@string/name"
        android:layout_margin="10px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myAddress"
        android:layout_below="@+id/myName"
        android:layout_centerInParent="true"
        android:contentDescription="@string/address"
        android:layout_margin="10px"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/myPhone"
        android:layout_below="@+id/myAddress"
        android:layout_centerInParent="true"
        android:text="@string/phone"
        android:layout_margin="10px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myEmail"
        android:layout_below="@id/myPhone"
        android:text="@string/email"
        android:layout_centerInParent="true"
        android:layout_margin="10px"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image1"
        android:id="@+id/image_background"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_below="@+id/myPhone"
        android:layout_margin="10px"/>



</RelativeLayout>